; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_osst.c_osst_write_trailer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_osst.c_osst_write_trailer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.osst_tape = type { i64, i64, %struct.st_partstat* }
%struct.st_partstat = type { i64, i32, i64 }
%struct.osst_request = type { i32 }

@OS_WRITE_NEW_MARK = common dso_local global i64 0, align 8
@ST_FM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.osst_tape*, %struct.osst_request**, i32)* @osst_write_trailer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @osst_write_trailer(%struct.osst_tape* %0, %struct.osst_request** %1, i32 %2) #0 {
  %4 = alloca %struct.osst_tape*, align 8
  %5 = alloca %struct.osst_request**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.st_partstat*, align 8
  %8 = alloca i32, align 4
  store %struct.osst_tape* %0, %struct.osst_tape** %4, align 8
  store %struct.osst_request** %1, %struct.osst_request*** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %10 = getelementptr inbounds %struct.osst_tape, %struct.osst_tape* %9, i32 0, i32 2
  %11 = load %struct.st_partstat*, %struct.st_partstat** %10, align 8
  %12 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %13 = getelementptr inbounds %struct.osst_tape, %struct.osst_tape* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %11, i64 %14
  store %struct.st_partstat* %15, %struct.st_partstat** %7, align 8
  store i32 0, i32* %8, align 4
  %16 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %17 = getelementptr inbounds %struct.osst_tape, %struct.osst_tape* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @OS_WRITE_NEW_MARK, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %48

21:                                               ; preds = %3
  %22 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %23 = load %struct.osst_request**, %struct.osst_request*** %5, align 8
  %24 = call i32 @osst_flush_drive_buffer(%struct.osst_tape* %22, %struct.osst_request** %23)
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  br label %59

28:                                               ; preds = %21
  %29 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %30 = load %struct.osst_request**, %struct.osst_request*** %5, align 8
  %31 = call i32 @osst_write_filemark(%struct.osst_tape* %29, %struct.osst_request** %30)
  store i32 %31, i32* %8, align 4
  %32 = load i32, i32* %8, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %28
  br label %59

35:                                               ; preds = %28
  %36 = load %struct.st_partstat*, %struct.st_partstat** %7, align 8
  %37 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = icmp sge i64 %38, 0
  br i1 %39, label %40, label %45

40:                                               ; preds = %35
  %41 = load %struct.st_partstat*, %struct.st_partstat** %7, align 8
  %42 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = add nsw i64 %43, 1
  store i64 %44, i64* %42, align 8
  br label %45

45:                                               ; preds = %40, %35
  %46 = load %struct.st_partstat*, %struct.st_partstat** %7, align 8
  %47 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %46, i32 0, i32 2
  store i64 0, i64* %47, align 8
  br label %48

48:                                               ; preds = %45, %3
  %49 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %50 = load %struct.osst_request**, %struct.osst_request*** %5, align 8
  %51 = call i32 @osst_write_eod(%struct.osst_tape* %49, %struct.osst_request** %50)
  store i32 %51, i32* %8, align 4
  %52 = load %struct.osst_tape*, %struct.osst_tape** %4, align 8
  %53 = load %struct.osst_request**, %struct.osst_request*** %5, align 8
  %54 = load i32, i32* %6, align 4
  %55 = call i32 @osst_write_header(%struct.osst_tape* %52, %struct.osst_request** %53, i32 %54)
  %56 = load i32, i32* @ST_FM, align 4
  %57 = load %struct.st_partstat*, %struct.st_partstat** %7, align 8
  %58 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %57, i32 0, i32 1
  store i32 %56, i32* %58, align 8
  br label %59

59:                                               ; preds = %48, %34, %27
  %60 = load i32, i32* %8, align 4
  ret i32 %60
}

declare dso_local i32 @osst_flush_drive_buffer(%struct.osst_tape*, %struct.osst_request**) #1

declare dso_local i32 @osst_write_filemark(%struct.osst_tape*, %struct.osst_request**) #1

declare dso_local i32 @osst_write_eod(%struct.osst_tape*, %struct.osst_request**) #1

declare dso_local i32 @osst_write_header(%struct.osst_tape*, %struct.osst_request**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
